--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
                 <i class="fa fa-users fa-5x"></i>
               </div>
               <div class="icon-text">
-                Display Students
+                Display Tickets
               </div>
             </a>
           </div>
