--- a/views/msg.ejs
+++ b/views/msg.ejs
@@ -20,7 +20,7 @@
                     <div class="card-body">
                         <div class="alert <%= styleClass %>" role="alert"><%= msg %></div>
                         <div class="text-center">
-                            <a class="float-left btn btn-lg btn-secondary" href="/upload">Back</a>
+                            <a class="float-left btn btn-lg btn-secondary" href="/upload"><i class="fa fa-chevron-left"></i> Back</a>
                             <% if(status == 'success') { %>
                                 <a class="btn btn-lg btn-success" href="/index">Home</a>
                             <% } %>
