--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -105,7 +105,7 @@
                         </div>
                         <div class="form-group text-center">
                            <button class="btn btn-lg btn-success" id="saveButton">Save</button>
-                           <a href="/" class="float-left btn-lg btn-secondary" id="backButton">Back </a>
+                           <a href="/" class="float-left btn-lg btn-secondary" id="backButton"><i class="fa fa-chevron-left"></i> Back </a>
                         </div>
                      </div>
                   </div>
