--- a/views/search-student.ejs
+++ b/views/search-student.ejs
@@ -26,20 +26,37 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script type="text/javascript">
 
-   function searchNames(query, box, callback,name) { //Query delay causing error
+   function searchNames(query, box, callback, name) { //Query delay causing error
       var names = [];
+      clearOptions();
       const ref = firebase.database().ref('students');
       //ref.orderByChild('last').equalTo(query).on("value", function(snapshot) {
-      ref.orderByChild(name).startAt(query).endAt(query + '\uf8ff').once("value").then(function (snapshot) {
+      ref.orderByChild('LAST').startAt(query).endAt(query + '\uf8ff').once("value").then(function (snapshot) {
+         names = [];
          snapshot.forEach(function (child) {
             var info = [child.child("LAST").val(), child.child("FIRST").val(), child.child("MI").val(), child.key];
             names.push(info);
          });
       }).then(function () {
-         clearOptions();
+         //debugger;
          addOptions(names);
 
          callback(names);
+      }, function (error) {
+         console.log("Error");
+      });
+      var firstNames = [];
+      ref.orderByChild('FIRST').startAt(query).endAt(query + '\uf8ff').once("value").then(function (snapshot) {
+         firstNames = [];
+         snapshot.forEach(function (child) {
+            var info = [child.child("LAST").val(), child.child("FIRST").val(), child.child("MI").val(), child.key];
+            firstNames.push(info);
+         });
+      }).then(function () {
+         //debugger;
+         addOptions(firstNames);
+
+         callback(firstNames);
       }, function (error) {
          console.log("Error");
       });
@@ -48,11 +65,15 @@
    function fillSelect(names) {
       if (names.length === 0) {
          console.log("failed");
-         alert("Name does not exist.");
+         //alert("Name does not exist.");
       }
    }
-   function getName(myName,param,box){
-      var nameval= myName.substring(0,1).toUpperCase()+myName.substring(1,myName.length);
+   function getName(myName, param, box) {
+      clearOptions();
+      if (!myName) {
+         return;
+      }
+      var nameval = myName.substring(0, 1).toUpperCase() + myName.substring(1, myName.length);
       console.log(nameval);
       searchNames(nameval, box, fillSelect, param)
 
@@ -124,7 +145,7 @@
                <div class="card">
                   <div class="card-header">
                      <div class="card-title">
-                        <h5>Search Student by ID or Student Name</h5>
+                        <h5>Search Student</h5>
                      </div>
                      <div class="card-text">
                      </div>
@@ -138,34 +159,23 @@
                         <div class="form-group">
                            <label> Name</label>
                            <div class="input-group mb-3">
-                              <input type="text" class="form-control" id="lastname" name="lastname"
-                                 aria-label="Recipient's username" aria-describedby="basic-addon2">
-                              </form>
-                              
-                              <input type="text" class="form-control" name="names" id="fn" value="Search by first name" aria-label="Recipient's username"
-                                 aria-describedby="basic-addon2">
-                                 <script>
-                                 $("#fn").keyup(function(event) { 
-                                 if (event.keyCode ===27) { 
-                                    $("#firstButton").click(); 
-                                                           } 
-                                                             }); 
-                                    </script>
+                              <!--<input type="text" class="form-control" id="lastname" name="lastname">-->
+                              <input type="text" class="form-control" name="names" id="fn">
+                              <script>
+                                 $("#fn").keyup(function (event) {
+                                    if (event.keyCode === 27) {
+                                       $("#firstButton").click();
+                                    }
+                                 }); 
+                              </script>
                               <div class="input-group-append">
                                  <button class="btn btn-secondary" type="button" id="firstButton"
-                                 
-
-                                 
                                     onclick="Javascript:getName(names.value,'FIRST','resBox');"><i
                                        class="fa fa-search fa-lg"></i></button>
-                                       <button class="btn btn-secondary" type="button" id="lastButton"
-                                 
-                                       onclick="Javascript:getName(names.value,'LAST','resBox');"><i
-                                          class="fa fa-search fa-lg"></i></button>
                               </div>
                            </div>
                         </div>
-                     
+
                         <div class="form-group">
                            <label>Names will appear below</label>
                            <select id="resBox" class="names form-control" size="10">
@@ -185,6 +195,7 @@
             </div>
          </div>
       </div>
-  
+   </form>
+</body>
 
 </html>
