--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -32,7 +32,7 @@
             $('input[id="maxCap"]').val('');
          });
          const database = firebase.database();
-        
+
          $('#resetButton').click(() => {
             alert("Resetting the database");
             database.ref('tickets/').remove();
@@ -63,6 +63,7 @@
    #maxCap {
       max-width: 200px;
    }
+
    form {
       padding-left: 10px;
    }
@@ -92,6 +93,8 @@
                      <div class="card-title">
                         <h5>Settings</h5>
                      </div>
+                  </div>
+                  <div class="card-body">
                      <div class="card-text">
                         <div class="form-group">
                            <label>Maximum Ticket Capacity: </label>
@@ -105,7 +108,8 @@
                         </div>
                         <div class="form-group text-center">
                            <button class="btn btn-lg btn-success" id="saveButton">Save</button>
-                           <a href="/" class="float-left btn-lg btn-secondary" id="backButton"><i class="fa fa-chevron-left"></i> Back </a>
+                           <a href="/" class="float-left btn-lg btn-secondary" id="backButton"><i
+                                 class="fa fa-chevron-left"></i> Back </a>
                         </div>
                      </div>
                   </div>
@@ -117,4 +121,5 @@
       </div>
    </form>
 </body>
+
 </html>
