--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,12 +15,12 @@
 <body>
   <div class="container  animated fadeIn">
     <div class="title float-left">
-      <h1 class="brand"><a href="/"><span>S<span>R</span>SS</span> Prom Sign Up</a></h1>
+      <h1 class="brand"><a href="/"><span>S<span>R</span>SS</span> Event Sign Up</a></h1>
     </div>
     <div class="help-icon float-right">
       <a href="/help"><i class="fa fa-question-circle fa-3x"></i></a>
     </div>
-    <div class="clearfix"></div>
+    <div class="clearfix"></div>  
     <div class="wrapper">
       <div class="company-info">
         <div id="logo-wrapper">
