--- a/views/display-ticket-data.ejs
+++ b/views/display-ticket-data.ejs
@@ -71,6 +71,7 @@
             <th>Middle Initial</th>
             <th>Last Name</th>
             <th>Grade</th>
+            <!--<th>Guest?</th>-->
             <th>Guest Ticket #</th>
           </tr>
           <% console.log(studentsData) %>
@@ -82,6 +83,7 @@
             <td><%= dt.middle %></td>
             <td><%= dt.last %></td>
             <td><%= dt.grade %></td>
+            <!--<td><%= dt.guestBool %></td>-->
             <td><%= dt.guest %></td>
           </tr>
           <% }) %>
