--- a/views/ticket-entry.ejs
+++ b/views/ticket-entry.ejs
@@ -230,6 +230,7 @@
 
                });
 
+               console.log(ogHost);
                if(!ogHost){
                   updateNum(1);
                }
